--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.11",
+    "expo-checkbox": "^2.5.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
