--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-ionicons": "^4.6.5",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-paper": "^5.12.1",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.3"
